--- a/dev/index.html
+++ b/dev/index.html
@@ -14,11 +14,11 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
   number  = {1},
   pages   = {194-235}
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
-  [6e4b80f9] BenchmarkTools v1.3.2
-  [e30172f5] Documenter v1.2.0
-  [961ee093] ModelingToolkit v8.73.1
-  [220ca800] StructuralIdentifiability v0.5.1 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.9.4
-Commit 8e5136fa297 (2023-11-14 08:46 UTC)
+  [6e4b80f9] BenchmarkTools v1.4.0
+  [e30172f5] Documenter v1.2.1
+  [961ee093] ModelingToolkit v8.75.0
+  [220ca800] StructuralIdentifiability v0.5.1 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.10.0
+Commit 3120989f39b (2023-12-25 18:01 UTC)
 Build Info:
   Official https://julialang.org/ release
 Platform Info:
@@ -26,71 +26,69 @@ Platform Info:
   CPU: 4 × AMD EPYC 7763 64-Core Processor
   WORD_SIZE: 64
   LIBM: libopenlibm
-  LLVM: libLLVM-14.0.6 (ORCJIT, znver3)
+  LLVM: libLLVM-15.0.7 (ORCJIT, znver3)
   Threads: 1 on 4 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v0.2.5
+  [47edcb42] ADTypes v0.2.6
   [a4c015fc] ANSIColoredPrinters v0.0.1
-⌅ [c3fe647b] AbstractAlgebra v0.32.5
+⌅ [c3fe647b] AbstractAlgebra v0.33.0
   [1520ce14] AbstractTrees v0.4.4
-  [7d9f7c33] Accessors v0.1.33
-  [79e6a3ab] Adapt v3.7.1
+⌅ [79e6a3ab] Adapt v3.7.2
   [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v7.6.1
-  [6e4b80f9] BenchmarkTools v1.3.2
+  [4fba245c] ArrayInterface v7.7.0
+  [4c555306] ArrayLayouts v1.5.0
+  [6e4b80f9] BenchmarkTools v1.4.0
   [e2ed5e7c] Bijections v0.1.6
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
   [2a0fbf3d] CPUSummary v0.2.4
   [00ebfdb7] CSTParser v3.3.6
   [49dc2e85] Calculus v0.5.1
-  [d360d2e6] ChainRulesCore v1.18.0
+  [d360d2e6] ChainRulesCore v1.19.0
   [fb6a15b2] CloseOpenIntervals v0.1.12
   [861a8166] Combinatorics v1.0.2
   [a80b9123] CommonMark v0.8.12
   [38540f10] CommonSolve v0.2.4
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.10.0
+  [34da2185] Compat v4.10.1
   [b152e2b5] CompositeTypes v0.1.3
-  [a33af91c] CompositionsBase v0.1.2
   [2569d6c7] ConcreteStructs v0.2.3
   [187b0558] ConstructionBase v1.5.4
   [adafc99b] CpuId v0.3.1
   [a8cc5b0e] Crayons v4.1.1
   [9a962f9c] DataAPI v1.15.0
-  [864edb3b] DataStructures v0.18.15
+  [864edb3b] DataStructures v0.18.16
   [e2d170a0] DataValueInterfaces v1.0.0
-  [8bb1440f] DelimitedFiles v1.9.1
-  [2b5f629d] DiffEqBase v6.141.0
-  [459566f4] DiffEqCallbacks v2.34.0
+  [2b5f629d] DiffEqBase v6.145.6
+  [459566f4] DiffEqCallbacks v2.36.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [b4f34e82] Distances v0.10.10
-  [31c24e10] Distributions v0.25.103
+  [b4f34e82] Distances v0.10.11
+  [31c24e10] Distributions v0.25.106
   [ffbed154] DocStringExtensions v0.9.3
-  [e30172f5] Documenter v1.2.0
+  [e30172f5] Documenter v1.2.1
 ⌅ [5b8099bc] DomainSets v0.6.7
   [fa6b7ba4] DualNumbers v0.6.8
   [7c1d4256] DynamicPolynomials v0.5.3
   [4e289a0a] EnumX v1.0.4
-  [f151be2c] EnzymeCore v0.6.4
+  [f151be2c] EnzymeCore v0.6.5
   [d4d017d3] ExponentialUtilities v1.25.0
   [e2ba6199] ExprTools v0.1.10
   [7034ab61] FastBroadcast v0.2.8
   [9aa1b823] FastClosures v0.3.2
   [29a986be] FastLapackInterface v2.0.0
-  [1a297f60] FillArrays v1.8.0
-  [6a86dc24] FiniteDiff v2.21.1
+  [1a297f60] FillArrays v1.9.3
+  [6a86dc24] FiniteDiff v2.22.0
   [59287772] Formatting v0.4.2
   [f6369f11] ForwardDiff v0.10.36
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [d9f16b24] Functors v0.4.5
-  [46192b85] GPUArraysCore v0.1.5
+⌃ [46192b85] GPUArraysCore v0.1.5
   [c145ed77] GenericSchur v0.5.3
   [d7ba0133] Git v1.3.0
   [c27321d9] Glob v1.3.1
   [86223c79] Graphs v1.9.0
-⌅ [0b43b601] Groebner v0.4.4
-  [d5909c97] GroupsCore v0.4.0
+⌅ [0b43b601] Groebner v0.5.1
+⌅ [d5909c97] GroupsCore v0.4.2
   [3e5b6fbb] HostCPUFeatures v0.1.16
   [34004b35] HypergeometricFunctions v0.3.23
   [b5f81e59] IOCapture v0.2.3
@@ -98,64 +96,65 @@ Platform Info:
   [d25df0c9] Inflate v0.1.4
   [18e54dd8] IntegerMathUtils v0.1.2
   [8197267c] IntervalSets v0.7.8
-  [3587e190] InverseFunctions v0.1.12
   [92d709cd] IrrationalConstants v0.2.2
-  [c8e1da08] IterTools v1.8.0
+  [c8e1da08] IterTools v1.10.0
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.5.0
   [682c06a0] JSON v0.21.4
-  [98e50ef6] JuliaFormatter v1.0.42
-  [ccbc3e58] JumpProcesses v9.8.0
+  [98e50ef6] JuliaFormatter v1.0.45
+  [ccbc3e58] JumpProcesses v9.10.1
   [ef3ab10e] KLU v0.4.1
-  [ba0b0d4f] Krylov v0.9.4
+  [ba0b0d4f] Krylov v0.9.5
   [b964fa9f] LaTeXStrings v1.3.1
-  [2ee39098] LabelledArrays v1.14.0
+  [2ee39098] LabelledArrays v1.15.0
   [984bce1d] LambertW v0.4.6
   [23fbe1c1] Latexify v0.16.1
-  [73f95e8e] LatticeRules v0.0.1
   [10f19ff3] LayoutPointers v0.1.15
   [0e77f7df] LazilyInitializedFields v1.2.2
   [50d2b5c4] Lazy v0.15.1
+  [5078a376] LazyArrays v1.8.3
   [d3d80556] LineSearches v7.2.0
-  [7ed4a6bd] LinearSolve v2.20.0
+  [7ed4a6bd] LinearSolve v2.22.0
   [2ab3a3ac] LogExpFunctions v0.3.26
   [bdcacae8] LoopVectorization v0.12.166
   [d8e11817] MLStyle v0.4.17
-  [1914dd2f] MacroTools v0.5.11
+  [1914dd2f] MacroTools v0.5.12
   [d125e4d3] ManualMemory v0.1.8
   [d0879d2d] MarkdownAST v0.1.2
+  [a3b82374] MatrixFactorizations v2.1.0
+  [bb5d69b7] MaybeInplace v0.1.1
   [e1d29d7a] Missings v1.1.0
-  [961ee093] ModelingToolkit v8.73.1
+  [961ee093] ModelingToolkit v8.75.0
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.3
-  [d8a4904e] MutableArithmetics v1.3.3
+  [d8a4904e] MutableArithmetics v1.4.0
   [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.2
 ⌅ [2edaba10] Nemo v0.37.5
-  [8913a72c] NonlinearSolve v2.8.2
-  [6fe1bfb0] OffsetArrays v1.12.10
+  [8913a72c] NonlinearSolve v3.4.0
+  [6fe1bfb0] OffsetArrays v1.13.0
   [bac558e1] OrderedCollections v1.6.3
-  [1dea7af3] OrdinaryDiffEq v6.59.3
-  [90014a1f] PDMats v0.11.30
+  [1dea7af3] OrdinaryDiffEq v6.68.2
+  [90014a1f] PDMats v0.11.31
   [65ce6f38] PackageExtensionCompat v1.0.2
   [3e851597] ParamPunPam v0.2.3
   [d96e819e] Parameters v0.12.3
-  [69de0a69] Parsers v2.8.0
+  [69de0a69] Parsers v2.8.1
   [e409e4f3] PoissonRandom v0.4.4
   [f517fe37] Polyester v0.7.9
   [1d0040c9] PolyesterWeave v0.2.1
-  [d236fae5] PreallocationTools v0.4.12
+  [d236fae5] PreallocationTools v0.4.17
   [aea7be01] PrecompileTools v1.2.0
   [21216c6a] Preferences v1.4.1
+  [08abe8d2] PrettyTables v2.3.1
   [27ebfcd6] Primes v0.5.5
   [92933f4c] ProgressMeter v1.9.0
   [1fd47b50] QuadGK v2.9.1
-  [8a4e6c94] QuasiMonteCarlo v0.3.3
   [fb686558] RandomExtensions v0.4.4
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v2.38.10
+  [731186ca] RecursiveArrayTools v3.4.2
   [f2c3362d] RecursiveFactorization v0.2.21
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
@@ -165,44 +164,41 @@ Platform Info:
   [fdea26ae] SIMD v3.4.6
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.42
-  [0bca4576] SciMLBase v2.9.1
-  [e9a6253c] SciMLNLSolve v0.1.9
+  [0bca4576] SciMLBase v2.16.5
   [c0aeaf25] SciMLOperators v0.3.7
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v0.1.25
+  [727e6d20] SimpleNonlinearSolve v1.2.0
   [699a6c99] SimpleTraits v0.9.4
   [ce78b400] SimpleUnPack v1.1.0
-  [66db9d55] SnoopPrecompile v1.0.3
-  [ed01d8cd] Sobol v1.5.0
-  [a2af1166] SortingAlgorithms v1.2.0
-  [47a9eef4] SparseDiffTools v2.13.0
+  [a2af1166] SortingAlgorithms v1.2.1
+  [47a9eef4] SparseDiffTools v2.15.0
   [e56a9233] Sparspak v0.3.9
   [276daf66] SpecialFunctions v2.3.1
   [aedffcd0] Static v0.8.8
-  [0d7ed370] StaticArrayInterface v1.4.1
-  [90137ffa] StaticArrays v1.7.0
+  [0d7ed370] StaticArrayInterface v1.5.0
+  [90137ffa] StaticArrays v1.9.0
   [1e83bf80] StaticArraysCore v1.4.2
   [82ae8749] StatsAPI v1.7.0
   [2913bbd2] StatsBase v0.34.2
   [4c63d2b9] StatsFuns v1.3.0
   [7792a7ef] StrideArraysCore v0.5.2
+  [892a3eda] StringManipulation v0.3.4
   [220ca800] StructuralIdentifiability v0.5.1 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
-  [2efcf032] SymbolicIndexingInterface v0.2.2
-  [d1185830] SymbolicUtils v1.4.0
-  [0c5d862f] Symbolics v5.10.0
+  [2efcf032] SymbolicIndexingInterface v0.3.3
+  [d1185830] SymbolicUtils v1.5.0
+  [0c5d862f] Symbolics v5.15.1
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.11.1
   [8290d209] ThreadingUtilities v0.5.2
   [a759f4b9] TimerOutputs v0.5.23
-  [0796e94c] Tokenize v0.5.26
-  [a2a6695c] TreeViews v0.3.0
+  [0796e94c] Tokenize v0.5.27
   [d5829a12] TriangularSolve v0.1.20
   [410a4b4d] Tricks v0.1.8
   [781d530d] TruncatedStacktraces v1.4.0
   [5c2747f8] URIs v1.5.1
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.19.0
-  [a7c27f48] Unityper v0.1.5
+  [a7c27f48] Unityper v0.1.6
   [3d5dd08c] VectorizationBase v0.21.65
   [19fa3120] VertexSafeGraphs v0.2.0
   [e21ec000] Antic_jll v0.201.500+0
@@ -211,10 +207,10 @@ Platform Info:
   [2e619515] Expat_jll v2.5.0+0
 ⌅ [e134572f] FLINT_jll v200.900.7+0
   [f8c6e375] Git_jll v2.42.0+0
-  [1d5cc7b8] IntelOpenMP_jll v2023.2.0+0
+  [1d5cc7b8] IntelOpenMP_jll v2024.0.2+0
   [94ce4f54] Libiconv_jll v1.17.0+0
-  [856f044c] MKL_jll v2023.2.0+0
-⌅ [656ef2d0] OpenBLAS32_jll v0.3.21+0
+  [856f044c] MKL_jll v2024.0.0+0
+⌅ [656ef2d0] OpenBLAS32_jll v0.3.24+0
   [458c3c95] OpenSSL_jll v3.0.12+0
   [efe28fd5] OpenSpecFun_jll v0.5.5+0
   [f50d1b31] Rmath_jll v0.4.0+0
@@ -236,7 +232,7 @@ Platform Info:
   [d6f4376e] Markdown
   [a63ad114] Mmap
   [ca575930] NetworkOptions v1.2.0
-  [44cfe95a] Pkg v1.9.2
+  [44cfe95a] Pkg v1.10.0
   [de0858da] Printf
   [9abbd945] Profile
   [3fa0cd96] REPL
@@ -245,29 +241,30 @@ Platform Info:
   [9e88b42a] Serialization
   [1a1011a3] SharedArrays
   [6462fe0b] Sockets
-  [2f01184e] SparseArrays
-  [10745b16] Statistics v1.9.0
+  [2f01184e] SparseArrays v1.10.0
+  [10745b16] Statistics v1.10.0
   [4607b0f0] SuiteSparse
   [fa267f1f] TOML v1.0.3
   [a4e569a6] Tar v1.10.0
   [8dfed614] Test
   [cf7118a7] UUIDs
   [4ec0a83e] Unicode
-  [e66e0078] CompilerSupportLibraries_jll v1.0.5+0
-  [781609d7] GMP_jll v6.2.1+2
+  [e66e0078] CompilerSupportLibraries_jll v1.0.5+1
+  [781609d7] GMP_jll v6.2.1+6
   [deac9b47] LibCURL_jll v8.4.0+0
+  [e37daf67] LibGit2_jll v1.6.4+0
   [29816b5a] LibSSH2_jll v1.11.0+1
-  [3a97d323] MPFR_jll v4.1.1+4
-  [c8ffd9c3] MbedTLS_jll v2.28.2+0
-  [14a3606d] MozillaCACerts_jll v2022.10.11
-  [4536629a] OpenBLAS_jll v0.3.21+4
-  [05823500] OpenLibm_jll v0.8.1+0
-  [efcefdf7] PCRE2_jll v10.42.0+0
-  [bea87d4a] SuiteSparse_jll v5.10.1+6
-  [83775a58] Zlib_jll v1.2.13+0
-  [8e850b90] libblastrampoline_jll v5.8.0+0
+  [3a97d323] MPFR_jll v4.2.0+1
+  [c8ffd9c3] MbedTLS_jll v2.28.2+1
+  [14a3606d] MozillaCACerts_jll v2023.1.10
+  [4536629a] OpenBLAS_jll v0.3.23+2
+  [05823500] OpenLibm_jll v0.8.1+2
+  [efcefdf7] PCRE2_jll v10.42.0+1
+  [bea87d4a] SuiteSparse_jll v7.2.1+1
+  [83775a58] Zlib_jll v1.2.13+1
+  [8e850b90] libblastrampoline_jll v5.8.0+1
   [8e850ede] nghttp2_jll v1.52.0+1
-  [3f19e933] p7zip_jll v17.4.0+0
-Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
+  [3f19e933] p7zip_jll v17.4.0+2
+Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.0 on <span class="colophon-date" title="Wednesday 29 November 2023 16:43">Wednesday 29 November 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Sunday 7 January 2024 00:04">Sunday 7 January 2024</span>. Using Julia version 1.10.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
